--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,12 +6,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  linter:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: docker://github/super-linter:v2.1.0
-
   build:
 
     runs-on: ubuntu-latest
@@ -31,6 +25,9 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+
+    - name: Run linter
+      run: npm run lint
 
     - name: Build
       run: npm run build
