--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,8 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-
+  linter:
     runs-on: ubuntu-latest
 
     strategy:
@@ -28,6 +27,25 @@ jobs:
 
     - name: Run linter
       run: npm run lint
+
+  build:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [22.x]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: Install dependencies
+      run: npm install
 
     - name: Build
       run: npm run build
