--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,12 @@
     },
     "plugins": ["react", "react-hooks"],
     "rules": {
+      "react/react-in-jsx-scope": "off",
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    },
+    "settings": {
+        "react": {
+        "version": "detect"
+        }
     }
 }
